--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ section{
 .project-card{
     background-color: #fff;
     border: 1px solid #fff;
-    min-height: 14em;
+    max-height: 20em;
     width: 20em;
     overflow: hidden;
     border-radius: 10px;
@@ -207,8 +207,14 @@ section{
 .project-card:hover .project-img{
     opacity: 0.9;
 }
+.project-img{
+    width: 20em;
+    max-height: 10em !important; 
+}
 .project-img img{
+    object-fit: cover;
     width: 100%;
+    max-height: 10em;
 }
 .project-info{
     padding: 1em;
@@ -243,6 +249,10 @@ section{
 }
 .contacts .info p{
     font-size: 1.2em;
+}
+.card a{
+    text-decoration: none;
+    color: #3a6cf4;
 }
 .footer{
     background-color: #000016;
